--- a/AVXQuicksort/AVXQuicksort.vcxproj
+++ b/AVXQuicksort/AVXQuicksort.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="AVXQuicksort.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="genpermidxs.h" />
+    <ClInclude Include="permidxs8.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
