--- a/AVXQuicksort/AVXQuicksort.vcxproj.filters
+++ b/AVXQuicksort/AVXQuicksort.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="genpermidxs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="permidxs8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
